maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:12: error: identifier expected but 'new' found.
  var L: new Array [Int] = [0,0]
         ^