maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
  var l=getMondeLargeur
  var L=getMondeHauteur
  
  
  
  
}

def findBiscuit():Array[Int] = {
  var L: new Array [Int] = [0,0]
  for (i <- 0 to l) {
    for (j <- 0 to L) {
      if (aBiscuit(i,j)) {
        L(0)=i;L(1)=j
        return L
        
      }
    }
  }
  
  
}